fix: fix image on mobile

--- a/web/styles/styles.scss
+++ b/web/styles/styles.scss
@@ -5,6 +5,7 @@ $enable-shadows: true;
 // Customize Boostrap Body
 $body-bg: hsl(210, 20%, 100%);
 $body-bg-2: darken($body-bg, 3%);
+$grid-gutter-width: 3rem;
 
 // Customize Boostrap Colors
 $primary: #22904b;
